--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="" />
     <meta name="keyword" content="" />
     <title></title>
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header role="banner">
@@ -24,15 +24,15 @@
       <section class="slide">
       </section>
       <section class="intro">
-        <h2>intro</h2>
+        <h2>Intro</h2>
         <div>
-          <p></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sapien urna, laoreet eu neque vel, finibus semper mi. Curabitur malesuada elementum placerat. Pellentesque euismod lacus a dignissim fermentum. Aliquam placerat lacus non purus consequat dignissim. Cras elementum imperdiet quam, non elementum mauris mattis in. Pellentesque ut augue quis tortor iaculis posuere eget non massa. Integer rutrum viverra leo, eget dignissim elit semper id. Ut scelerisque metus ultricies odio ultricies volutpat</p>
         </div>
       </section>
       <section class="ship">
         <h2>Ship details</h2>
           <div>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sapien urna, laoreet eu neque vel, finibus semper mi. Curabitur malesuada elementum placerat. Pellentesque euismod lacus a dignissim fermentum. Aliquam placerat lacus non purus consequat dignissim. Cras elementum imperdiet quam, non elementum mauris mattis in. Pellentesque ut augue quis tortor iaculis posuere eget non massa. Integer rutrum viverra leo, eget dignissim elit semper id. Ut scelerisque metus ultricies odio ultricies volutpat</p>
           </div>
       </section>
     </main>
