--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <body>
     <header role="banner">
       <h1>Cruise Ship</h1>
+      <span id="menu-button" class="button">Menu</span>
+      <span id="close-menu" class="button">X</span>
       <ul role="navigation">
         <li><a href="">Home</a></li>
         <li><a href="">Events</a></li>
@@ -22,12 +24,20 @@
     </header>
     <main role="main">
       <section class="slide">
+        <div class="left">&#60</div>
+        <div class="right">&#62</div>
+        <div class="bottom">
+        </div>
+      </section>
+      <section class="parallax">
       </section>
       <section class="intro">
         <h2>Intro</h2>
         <div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sapien urna, laoreet eu neque vel, finibus semper mi. Curabitur malesuada elementum placerat. Pellentesque euismod lacus a dignissim fermentum. Aliquam placerat lacus non purus consequat dignissim. Cras elementum imperdiet quam, non elementum mauris mattis in. Pellentesque ut augue quis tortor iaculis posuere eget non massa. Integer rutrum viverra leo, eget dignissim elit semper id. Ut scelerisque metus ultricies odio ultricies volutpat</p>
         </div>
+      </section>
+      <section class="parallax">
       </section>
       <section class="ship">
         <h2>Ship details</h2>
