--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </header>
     <main role="main">
       <section class="slide">
-        <div class="left">&#60</div>
-        <div class="right">&#62</div>
+        <div class="left">&#60;</div>
+        <div class="right">&#62;</div>
         <div class="bottom">
         </div>
       </section>
