--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </ul>
     </header>
     <main role="main">
-      <section class="slide">
+      <section id="slide">
         <div class="left">&#60;</div>
         <div class="right">&#62;</div>
         <div class="bottom">
